# SciX

./: .gitignore  Dataset final scix.xlsx - Dataset_Complete_modified.csv  README.md  main.py  pyproject.toml
data/processed/: polymer_data_processed.csv
notebooks/: eda.ipynb
outputs/: aggregate_results_detailed.csv  aggregate_results_summary.csv  cv_results.csv  results.csv
outputs/session_001/logistic_combined_MIC_PAO1/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_combined_MIC_PAO1_PA/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_combined_MIC_SA/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_composition_MIC_PAO1/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_composition_MIC_PAO1_PA/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_composition_MIC_SA/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_entropy_MIC_PAO1/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_entropy_MIC_PAO1_PA/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/logistic_entropy_MIC_SA/: config.json  fold_metrics.csv  predictions.csv  summary.json
outputs/session_001/nn_combined_MIC_PAO1/: config.json  (+3 more)
paper/: experiment_log.md  findings.md
src/: __init__.py  evaluation.py  features.py  models.py  output_utils.py  preprocessing.py
(+679 files in other folders)
