[project]
name = "scix"
version = "0.1.0"
description = "MIC prediction for antibacterial polymers using Shannon Entropy features"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "torch>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
